--- a/views/admin-add.ejs
+++ b/views/admin-add.ejs
@@ -59,7 +59,7 @@
           <label class="text-white" for="floatingInput">أسم العزاء</label>
         </div>
         <div class="form-floating mb-3">
-          <input name="URL" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="">
+          <input value="https://www.youtube.com/embed/" name="URL" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="">
           <label class="text-white" for="floatingInput">الرابط الخاص</label>
         </div>
         <button class="btn btn-primary">إرسال</button>
