--- a/views/admin-add.ejs
+++ b/views/admin-add.ejs
@@ -62,7 +62,7 @@
           <input value="https://www.youtube.com/embed/" name="URL" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="">
           <label class="text-white" for="floatingInput">الرابط الخاص</label>
         </div>
-        <button class="btn btn-primary">إرسال</button>
+        <button class="btn btn-primary">إضافة</button>
       </form>
     </center>
   </nav>
