--- a/views/admin-add.ejs
+++ b/views/admin-add.ejs
@@ -55,11 +55,11 @@
     <center>
       <form class="mx-4" action="/admin" method="post">
         <div class="form-floating mb-3">
-          <input name="name" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="">
+          <input name="name" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="" required>
           <label class="text-white" for="floatingInput">أسم العزاء</label>
         </div>
         <div class="form-floating mb-3">
-          <input value="https://www.youtube.com/embed/" name="URL" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="">
+          <input value="https://www.youtube.com/embed/" name="URL" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder="" required>
           <label class="text-white" for="floatingInput">الرابط الخاص</label>
         </div>
         <button class="btn btn-primary">إضافة</button>
