--- a/views/admin-delete.ejs
+++ b/views/admin-delete.ejs
@@ -40,7 +40,7 @@
               <a class="nav-link active" aria-current="page" href="/">الصفحة الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/mnuat">منوعات</a>
+              <a class="nav-link active" href="/mnuat">عزاء</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/admin">إدارة العزاء</a>
