--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,7 +41,7 @@
               <a class="nav-link disabled" aria-current="page" href="/">الصفحة الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/mnuat">منوعات</a>
+              <a class="nav-link active" href="/mnuat">عزاء</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/admin">إدارة العزاء</a>
@@ -54,7 +54,13 @@
 
   <nav>
     <center>
-      <a href="/mnuat" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">منوعات
+      <a href="/mnuat" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">عزاء
+      </a>
+      <br><br>
+      <a href="/mouled" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">مولد
+      </a>
+      <br><br>
+      <a href="/wfah" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">وفاة
       </a>
       <br><br>
       <a href="/admin" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">إدارة العزاء
