--- a/views/mouled.ejs
+++ b/views/mouled.ejs
@@ -5,6 +5,7 @@
   <!-- Google tag (gtag.js) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9840527936392169"
     crossorigin="anonymous"></script>
+  <script src="/mnuat.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -20,6 +21,7 @@
   <meta name="keyword" content="عزاء,محرم,شيعة,حسينية,azzaih,عزائي">
   <link rel="stylesheet" href="/index.css">
   <link rel="shortcut icon" href="/csv.jpeg" type="image/x-icon">
+  <link rel="stylesheet" href="/button.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>عزائي</title>
@@ -40,7 +42,7 @@
               <a class="nav-link active" aria-current="page" href="/">الصفحة الرئيسية</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/mnuat">عزاء</a>
+              <a class="nav-link action" href="/mnuat">عزاء</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="/admin">إدارة العزاء</a>
@@ -50,31 +52,22 @@
       </div>
     </nav>
   </header>
+  <center>
+    <span id="section" dir="ltr" style="float: left; width: 75%; height: 100%;">
 
-  <nav>
-    <center>
-      <form class="mx-4" action="/admin" method="post">
-        <div class="form-floating mb-3">
-          <input name="name" type="text" class="form-control bg-dark text-white" id="floatingInput" placeholder=""
-            required>
-          <label class="text-white" for="floatingInput">أسم العزاء</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input value="https://www.youtube.com/embed/" name="URL" type="text" class="form-control bg-dark text-white"
-            id="floatingInput" placeholder="" required>
-          <label class="text-white" for="floatingInput">الرابط الخاص</label>
-        </div>
-        <select name="alnooa" class="form-select mb-3" aria-label="Default select example" required>
-          <option selected>أختر النوع</option>
-          <optgroup>
-            <option value="عزاء">عزاء</option>
-            <option value="مولد">مولد</option>
-            <option value="وفاة">وفاة</option>
-          </optgroup>
-        </select>
-        <button class="btn btn-primary">إضافة</button>
-      </form>
-    </center>
+      <h3 class="text-white">لا يوجد</h3>
+
+    </span>
+  </center>
+  <nav class="nav" style="text-align: right; width: 25%; height: 100%; flex-wrap: wrap;
+  flex-direction: column;">
+    <% item.forEach(item=> { %>
+      <% if (item.name != null && item.alnooa == "مولد") { %>
+      <button class="btn text-white my-1 mx-1" style="background-color: rgb(13, 110, 253)"
+        onclick="azzaih('<%= item.URL %>')"><%= item.name %></button>
+        <% } %>
+      <% }) %>
+
   </nav>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
