--- a/views/admin-add.ejs
+++ b/views/admin-add.ejs
@@ -64,7 +64,7 @@
             id="floatingInput" placeholder="" required>
           <label class="text-white" for="floatingInput">الرابط الخاص</label>
         </div>
-        <select name="alnooa" class="form-select mb-3" aria-label="Default select example" required>
+        <select name="alnooa" class="form-select mb-3 bg-dark text-white" aria-label="Default select example" required>
           <option selected>أختر النوع</option>
           <optgroup>
             <option value="عزاء">عزاء</option>
