--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,6 +63,9 @@
       <a href="/wfah" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">وفاة
       </a>
       <br><br>
+      <a href="/mlass" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">إختيار ملا
+      </a>
+      <br><br>
       <a href="/admin" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">إدارة العزاء
       </a>
       <br><br>
