--- a/views/mlassI.ejs
+++ b/views/mlassI.ejs
@@ -5,6 +5,7 @@
   <!-- Google tag (gtag.js) -->
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9840527936392169"
     crossorigin="anonymous"></script>
+  <script src="/mnuat.js"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -20,6 +21,7 @@
   <meta name="keyword" content="عزاء,محرم,شيعة,حسينية,azzaih,عزائي">
   <link rel="stylesheet" href="/index.css">
   <link rel="shortcut icon" href="/csv.jpeg" type="image/x-icon">
+  <link rel="stylesheet" href="/button.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>عزائي</title>
@@ -50,66 +52,27 @@
       </div>
     </nav>
   </header>
+  <center>
+    <span id="section" dir="ltr" style="float: left; width: 75%; height: 100%;">
 
-  <nav>
-    <center>
-      <form class="mx-4" action="/admin" method="post">
-        <div class="form-floating mb-3">
-          <input value="<%= item.name %>" name="name" type="text" class="form-control bg-dark text-white"
-            id="floatingInput" placeholder="" required>
-          <label class="text-white" for="floatingInput">أسم العزاء</label>
-        </div>
-        <div class="form-floating mb-3">
-          <input value="<%= item.URL %>" name="URL" type="text" class="form-control bg-dark text-white"
-            id="floatingInput" placeholder="" required>
-          <label class="text-white" for="floatingInput">الرابط الخاص</label>
-        </div>
-        <select name="alnooa" class="form-select mb-3 bg-dark text-white aria-label="Default select example" required>
-            <option selected value="<%= item.alnooa %>">
-              <%= item.alnooa %>
-          <optgroup>
-            <option value="عزاء">عزاء</option>
-            <option value="مولد">مولد</option>
-            <option value="وفاة">وفاة</option>
-          </optgroup>
-        </select>
-                <select name="mlass" class="form-select mb-3 bg-dark text-white" aria-label="Default select example" required>
-          <option selected>اختر ملا</option>
-          <optgroup>
-            <% itemM.forEach(item => { %>
-              <option value="<%= item.name %>"><%= item.name %></option>
-            <% }) %>
-          </optgroup>
-        </select>
+      <h3 class="text-white">لا يوجد</h3>
 
-        <button data-linkid="<%= item._id %>" class="btn btn-primary create">تعديل</button>
-      </form>
-    </center>
+    </span>
+  </center>
+  <nav class="nav" style="text-align: right; width: 25%; height: 100%; flex-wrap: wrap;
+  flex-direction: column;">
+    <% item.forEach(item=> { %>
+      <% if (item.name != null && item.mlass ==  itemM.name) { %>
+        <button class="btn text-white my-1 mx-1" style="background-color: rgb(13, 110, 253)"
+          onclick="azzaih('<%= item.URL %>')"><%= item.name %></button>
+          <% } %>
+      <% }) %>
+
   </nav>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
   integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
   integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-<script>
-  const btnelement = document.querySelector(".create")
-  const articleId = btnelement.getAttribute("data-linkid");
-
-
-  // what is data ?
-  // { mylink: "/all-articles" }
-
-
-  btnelement.addEventListener("click", (eo) => {
-
-    fetch(` /admin-delete/${articleId} `, { method: "DELETE" })
-      .then((response) => response.json())
-      .then((data) => window.location.href = data.mylink)
-      .catch((err) => {
-        console.log(err);
-      });
-
-  })
-</script>
 
 </html>
