--- a/views/mlassI.ejs
+++ b/views/mlassI.ejs
@@ -64,7 +64,7 @@
     <% item.forEach(item=> { %>
       <% if (item.name != null && item.mlass ==  itemM.name) { %>
         <button class="btn text-white my-1 mx-1" style="background-color: rgb(13, 110, 253)"
-          onclick="azzaih('<%= item.URL %>')"><%= item.name %></button>
+          onclick="azzaih('<%= item.URL %>')"><%= item.name %> - <%= item.alnooa %></button>
           <% } %>
       <% }) %>
 
