--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,6 +66,9 @@
       <a href="/mlass" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">إختيار ملا
       </a>
       <br><br>
+      <a href="/duaa" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">دعاء
+      </a>
+      <br><br>
       <a href="/admin" class="btn mb-2 mb-md-0 btn-secondary btn-block btn-round">إدارة العزاء
       </a>
       <br><br>
