--- a/views/admin-edit.ejs
+++ b/views/admin-edit.ejs
@@ -71,6 +71,7 @@
             <option value="عزاء">عزاء</option>
             <option value="مولد">مولد</option>
             <option value="وفاة">وفاة</option>
+            <option value="دعاء">دعاء</option>
           </optgroup>
         </select>
                 <select name="mlass" class="form-select mb-3 bg-dark text-white" aria-label="Default select example" required>
