--- a/views/mlass.ejs
+++ b/views/mlass.ejs
@@ -56,7 +56,7 @@
 
     <nav class="nav">
       <% item.forEach(item=> { %>
-        <% if (item.name=="أختر النوع" ) { %>
+        <% if (item.name=="اختر ملا" ) { %>
           <a class="btn btn-info my-2 mx-2" href="/mlass/<%= item._id %>">أخرى</a>
           <% }else{ %>
             <a class="btn btn-info my-2 mx-2" href="/mlass/<%= item._id %>">
